--- a/sass/main.css
+++ b/sass/main.css
@@ -1,28 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap");
 .theme0 .calc, .theme0 .attribution {
-  background-color: hsl(222deg, 26%, 31%);
+  background-color: hsl(222, 26%, 31%);
 }
 .theme0 .calc__container-logo, .theme0 .labels, .theme0 .calc__theme {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
 }
 .theme0 .calc__header-btns {
-  background-color: hsl(223deg, 31%, 20%) !important;
+  background-color: hsl(223, 31%, 20%) !important;
 }
 .theme0 .toggleBtn {
-  background-color: hsl(6deg, 70%, 34%) !important;
+  background-color: hsl(6, 70%, 34%) !important;
 }
 .theme0 .toggleBtn:hover {
-  background-color: hsl(6deg, 63%, 50%) !important;
+  background-color: hsl(6, 63%, 50%) !important;
 }
 .theme0 .calc__display {
-  background-color: hsl(224deg, 36%, 15%);
+  background-color: hsl(224, 36%, 15%);
 }
 .theme0 .calc__numberContainer {
-  background-color: hsl(223deg, 31%, 20%) !important;
+  background-color: hsl(223, 31%, 20%) !important;
 }
 .theme0 .numsAndOperators {
-  background-color: hsl(30deg, 25%, 89%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(28deg, 16%, 65%) !important;
+  background-color: hsl(30, 25%, 89%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(28, 16%, 65%) !important;
 }
 .theme0 .numsAndOperators:hover {
   filter: brightness(125%) !important;
@@ -33,8 +33,8 @@
   box-shadow: none !important;
 }
 .theme0 .delBtn, .theme0 .resetBtn {
-  background-color: hsl(225deg, 21%, 49%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(224deg, 28%, 35%) !important;
+  background-color: hsl(225, 21%, 49%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(224, 28%, 35%) !important;
 }
 .theme0 .delBtn:hover, .theme0 .resetBtn:hover {
   filter: brightness(125%) !important;
@@ -46,8 +46,8 @@
   box-shadow: none !important;
 }
 .theme0 .equalesBtn {
-  background-color: hsl(6deg, 63%, 50%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(6deg, 70%, 34%) !important;
+  background-color: hsl(6, 63%, 50%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(6, 70%, 34%) !important;
 }
 .theme0 .equalesBtn:hover {
   filter: brightness(125%) !important;
@@ -59,39 +59,39 @@
   box-shadow: none !important;
 }
 .theme0 .equalesBtn {
-  color: hsl(0deg, 0%, 100%) !important;
+  color: hsl(0, 0%, 100%) !important;
 }
 .theme0 .delBtn, .theme0 .resetBtn {
-  color: hsl(0deg, 0%, 100%) !important;
+  color: hsl(0, 0%, 100%) !important;
 }
 .theme0 .previous-operand, .theme0 .current-operand {
-  color: hsl(0deg, 0%, 100%) !important;
+  color: hsl(0, 0%, 100%) !important;
 }
 
 .theme1 .calc, .theme1 .attribution {
-  background-color: hsl(0deg, 0%, 90%);
+  background-color: hsl(0, 0%, 90%);
 }
 .theme1 .calc__container-logo, .theme1 .labels, .theme1 .calc__theme {
-  color: hsl(60deg, 10%, 19%);
+  color: hsl(60, 10%, 19%);
 }
 .theme1 .calc__header-btns {
-  background-color: hsl(0deg, 5%, 81%) !important;
+  background-color: hsl(0, 5%, 81%) !important;
 }
 .theme1 .toggleBtn {
-  background-color: hsl(25deg, 99%, 27%) !important;
+  background-color: hsl(25, 99%, 27%) !important;
 }
 .theme1 .toggleBtn:hover {
-  background-color: hsl(25deg, 98%, 40%) !important;
+  background-color: hsl(25, 98%, 40%) !important;
 }
 .theme1 .calc__display {
-  background-color: hsl(0deg, 0%, 93%);
+  background-color: hsl(0, 0%, 93%);
 }
 .theme1 .calc__numberContainer {
-  background-color: hsl(0deg, 5%, 81%) !important;
+  background-color: hsl(0, 5%, 81%) !important;
 }
 .theme1 .numsAndOperators {
-  background-color: hsl(45deg, 7%, 89%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(35deg, 11%, 61%) !important;
+  background-color: hsl(45, 7%, 89%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(35, 11%, 61%) !important;
 }
 .theme1 .numsAndOperators:hover {
   filter: brightness(125%) !important;
@@ -102,8 +102,8 @@
   box-shadow: none !important;
 }
 .theme1 .delBtn, .theme1 .resetBtn {
-  background-color: hsl(185deg, 42%, 37%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(185deg, 58%, 25%) !important;
+  background-color: hsl(185, 42%, 37%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(185, 58%, 25%) !important;
 }
 .theme1 .delBtn:hover, .theme1 .resetBtn:hover {
   filter: brightness(125%) !important;
@@ -115,8 +115,8 @@
   box-shadow: none !important;
 }
 .theme1 .equalesBtn {
-  background-color: hsl(25deg, 98%, 40%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(25deg, 99%, 27%) !important;
+  background-color: hsl(25, 98%, 40%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(25, 99%, 27%) !important;
 }
 .theme1 .equalesBtn:hover {
   filter: brightness(125%) !important;
@@ -128,39 +128,39 @@
   box-shadow: none !important;
 }
 .theme1 .delBtn, .theme1 .resetBtn {
-  color: hsl(0deg, 0%, 100%) !important;
+  color: hsl(0, 0%, 100%) !important;
 }
 .theme1 .equalesBtn {
-  color: hsl(0deg, 0%, 100%) !important;
+  color: hsl(0, 0%, 100%) !important;
 }
 .theme1 .previous-operand, .theme1 .current-operand {
-  color: hsl(60deg, 10%, 19%) !important;
+  color: hsl(60, 10%, 19%) !important;
 }
 
 .theme2 .calc, .theme2 .attribution {
-  background-color: hsl(268deg, 75%, 9%);
+  background-color: hsl(268, 75%, 9%);
 }
 .theme2 .calc__container-logo, .theme2 .labels, .theme2 .calc__theme {
-  color: hsl(52deg, 100%, 62%);
+  color: hsl(52, 100%, 62%);
 }
 .theme2 .calc__header-btns {
-  background-color: hsl(268deg, 71%, 12%) !important;
+  background-color: hsl(268, 71%, 12%) !important;
 }
 .theme2 .toggleBtn {
-  background-color: hsl(177deg, 92%, 70%) !important;
+  background-color: hsl(177, 92%, 70%) !important;
 }
 .theme2 .toggleBtn:hover {
-  background-color: hsl(176deg, 100%, 44%) !important;
+  background-color: hsl(176, 100%, 44%) !important;
 }
 .theme2 .calc__display {
-  background-color: hsl(268deg, 71%, 12%);
+  background-color: hsl(268, 71%, 12%);
 }
 .theme2 .calc__numberContainer {
-  background-color: hsl(268deg, 71%, 12%) !important;
+  background-color: hsl(268, 71%, 12%) !important;
 }
 .theme2 .numsAndOperators {
-  background-color: hsl(268deg, 47%, 21%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(290deg, 70%, 36%) !important;
+  background-color: hsl(268, 47%, 21%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(290, 70%, 36%) !important;
 }
 .theme2 .numsAndOperators:hover {
   filter: brightness(125%) !important;
@@ -171,8 +171,8 @@
   box-shadow: none !important;
 }
 .theme2 .delBtn, .theme2 .resetBtn {
-  background-color: hsl(281deg, 89%, 26%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(285deg, 91%, 52%) !important;
+  background-color: hsl(281, 89%, 26%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(285, 91%, 52%) !important;
 }
 .theme2 .delBtn:hover, .theme2 .resetBtn:hover {
   filter: brightness(125%) !important;
@@ -184,8 +184,8 @@
   box-shadow: none !important;
 }
 .theme2 .equalesBtn {
-  background-color: hsl(176deg, 100%, 44%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(177deg, 92%, 70%) !important;
+  background-color: hsl(176, 100%, 44%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(177, 92%, 70%) !important;
 }
 .theme2 .equalesBtn:hover {
   filter: brightness(125%) !important;
@@ -197,16 +197,16 @@
   box-shadow: none !important;
 }
 .theme2 .delBtn, .theme2 .resetBtn {
-  color: hsl(0deg, 0%, 100%) !important;
+  color: hsl(0, 0%, 100%) !important;
 }
 .theme2 .equalesBtn {
-  color: hsl(198deg, 20%, 13%) !important;
+  color: hsl(198, 20%, 13%) !important;
 }
 .theme2 .numsAndOperators {
-  color: hsl(52deg, 100%, 62%) !important;
+  color: hsl(52, 100%, 62%) !important;
 }
 .theme2 .previous-operand, .theme2 .current-operand {
-  color: hsl(52deg, 100%, 62%) !important;
+  color: hsl(52, 100%, 62%) !important;
 }
 
 * {
@@ -317,7 +317,7 @@ body .calc .calc__container .calc__numberContainer .rows {
 body .calc .calc__container .calc__numberContainer .rows .keyStyle {
   all: unset;
   width: min(110px, 22%);
-  height: 70px;
+  height: clamp(3rem, 2.125rem + 5vw, 4.375rem);
   text-align: center;
   border-radius: 5px;
   font-size: clamp(2.1rem, 1.81425rem + 1.27vw, 2.6rem);
@@ -363,5 +363,5 @@ body .calc .calc__container .calc__numberContainer .row-5 .resetBtn:hover, body 
   color: brown;
 }
 .attribution a {
-  color: hsl(228deg, 45%, 44%);
+  color: hsl(228, 45%, 44%);
 }/*# sourceMappingURL=main.css.map */
